--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
@@ -24,9 +28,11 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^1.40.2",
     "sass": "^1.54.0",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
