Feat: add contact-me on hero-page and About section

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
+    "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tags-canvas": "^1.0.1",
     "react-transition-group": "^4.4.2",
     "react-tsparticles": "^1.40.2",
     "sass": "^1.54.0",
