--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,18 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "logo512.svg",
+      "type": "image/svg",
       "sizes": "192x192"
     },
     {
       "src": "logo512.svg",
-      "type": "image/png",
+      "type": "image/svg",
       "sizes": "512x512"
+    },
+    {
+      "src": "favicon.png",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
