--- a/public/content/projects.json
+++ b/public/content/projects.json
@@ -1,11 +1,57 @@
 {
   "projects": [
     {
-      "title": null,
-      "description": null,
+      "title": "National archives",
+      "description": "An online web application for the creation and collection of a high number of documents and materials that records important events in Hellenic history. Greek army is responsible to preserve and maintain these materials and makes them available for research to the audience.",
       "images": [],
-      "presentation_img": null,
-      "technologies_used": []
+      "presentation_img": "https://natours.netlify.app/img/nat-9.jpg",
+      "technologies_used": [
+        "Angular 13",
+        "RxJS",
+        "BootStrap 5",
+        "PrimeNg",
+        "Nebular"
+      ]
+    },
+    {
+      "title": "Street Lighting",
+      "subtitle": "Pilot Project",
+      "description": "A scalable street lighting solution template integrated in ThingsBoard IoT platform, that achieve complete control over a city lighting infrastructure and realize exceptional energy savings.",
+      "images": [],
+      "presentation_img": "https://natours.netlify.app/img/nat-9.jpg",
+      "technologies_used": ["Angular 13", "RxJS", "BootStrap 5"]
+    },
+    {
+      "title": "Esmart City",
+      "description": "A smart application that interconnect and visualize public buildings of the regional unit of Achaia, for the energy management and monitoring, through the installation of smart energy devices, such as smart meters, smart plugs and sensors.",
+      "images": [],
+      "presentation_img": "https://natours.netlify.app/img/nat-9.jpg",
+      "technologies_used": [
+        "Angular 13",
+        "RxJS",
+        "SCSS",
+        "BootStrap 5",
+        "Node.js"
+      ]
+    },
+    {
+      "title": "Master Thesis",
+      "description": "Entity Linking with deep learning networks and community prediction methods, leveraging a knowledge base with 20 million Wikipedia articles and 93 million Wikidata items.",
+      "images": [],
+      "presentation_img": "https://natours.netlify.app/img/nat-9.jpg",
+      "technologies_used": ["Spark", "PySpark", "Python"]
+    },
+    {
+      "title": "Personal Portfolio",
+      "description": "My personal portfolio, written with modern Javascript Frameworks and Libraries, such as React, Redux, Material UI, and more.",
+      "images": [],
+      "presentation_img": "https://natours.netlify.app/img/nat-9.jpg",
+      "technologies_used": [
+        "React",
+        "Redux",
+        "Material UI",
+        "Styled-components"
+      ]
     }
   ]
 }
