Feat: try add CSSTransition on projects list.
Check why not working properly

--- a/public/content/projects.json
+++ b/public/content/projects.json
@@ -15,7 +15,7 @@
     },
     {
       "title": "Street Lighting",
-      "subtitle": "Pilot Project",
+      "subtitle": "Meazon Pilot Project",
       "description": "A scalable street lighting solution template integrated in ThingsBoard IoT platform, that achieve complete control over a city lighting infrastructure and realize exceptional energy savings.",
       "images": [],
       "presentation_img": "https://natours.netlify.app/img/nat-9.jpg",
