--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
     "jquery": "^3.6.0",
+    "leaflet": "^1.8.0",
     "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
@@ -66,5 +69,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.11",
+    "install": "^0.13.0",
+    "npm": "^8.16.0"
   }
 }
