--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.9.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +26,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
+    "env-cmd": "^10.1.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
     "node-sass": "^7.0.1",
@@ -33,6 +36,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
+    "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
@@ -47,7 +51,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start ",
+    "start": "env-cmd -f .env.development.local react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
