--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emailjs/browser": "^3.6.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -51,7 +52,7 @@
   },
   "scripts": {
     "watch:sass": "sass ./src/styles/style.scss:./src/styles/style.css --watch",
-    "start": "react-scripts start",
+    "start": "env-cmd -f .env.development.local react-scripts start",
     "compile:sass": "sass ./src/styles/style.scss:./src/styles/style.css",
     "compress:css": "sass ./src/styles/style.css:./src/styles/style.css --style compressed",
     "build": "npm run compile:sass && npm run compress:css && react-scripts build ",
