--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
     "env-cmd": "^10.1.0",
+    "framer-motion": "^7.1.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
     "prop-types": "^15.8.1",
