--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
+    "buffer": "^6.0.3",
     "env-cmd": "^10.1.0",
     "framer-motion": "^7.1.0",
     "jquery": "^3.6.0",
