--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "react-transition-group": "^4.4.2",
     "react-tsparticles": "^1.40.2",
     "sass": "^1.54.0",
+    "scss-tokenizer": "^0.4.3",
+    "nth-check": "2.1.1",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
