--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "framer-motion": "^7.1.0",
     "jquery": "^3.6.0",
     "leaflet": "^1.8.0",
+    "loaders.css": "^0.1.2",
+    "nth-check": "2.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,6 +42,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
+    "react-loaders": "^3.0.1",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
@@ -49,9 +52,8 @@
     "react-transition-group": "^4.4.2",
     "react-tsparticles": "^1.40.2",
     "sass": "^1.54.0",
-    "scss-tokenizer": "^0.4.3",
-    "nth-check": "2.1.1",
     "scrollreveal": "^4.0.9",
+    "scss-tokenizer": "^0.4.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
