--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
   },
   "scripts": {
     "watch:sass": "sass ./src/styles/style.scss:./src/styles/style.css --watch",
-    "start": "env-cmd -f .env.development.local react-scripts start",
+    "start": "env-cmd -f .env.development.local react-app-rewired start",
     "compile:sass": "sass ./src/styles/style.scss:./src/styles/style.css",
     "compress:css": "sass ./src/styles/style.css:./src/styles/style.css --style compressed",
-    "build": "npm run compile:sass && npm run compress:css && react-scripts build ",
-    "test": "react-scripts test",
+    "build": "npm run compile:sass && npm run compress:css && react-app-rewired build ",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -89,6 +89,8 @@
     "@types/leaflet": "^1.7.11",
     "install": "^0.13.0",
     "npm": "^8.16.0",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-app-rewire-aliases": "^0.2.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
