Change cv content

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portofolio",
-  "description": "My personal site, written with React.js ecosystem",
+  "description": "My personal portfolio website, written with React.js ecosystem",
   "author": "Andreas Andrikopoulos",
   "version": "0.1.0",
   "repository": {
