--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dropzone": "^14.2.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-lazyload": "^3.2.0",
     "react-leaflet": "^4.0.1",
     "react-loaders": "^3.0.1",
     "react-redux": "^8.0.2",
