--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@emotion/styled": "^11.10.0",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.20",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -29,6 +31,7 @@
     "@types/react-dom": "^18.0.6",
     "animejs": "^3.2.1",
     "buffer": "^6.0.3",
+    "date-fns": "^2.30.0",
     "env-cmd": "^10.1.0",
     "framer-motion": "^7.1.0",
     "jquery": "^3.6.0",
